--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-            <div class="logo"><a href="index.html"><img src="images/logo.png" alt="Li-Ming Tan"></a>
+            <div class="logo"><a href="index.html"><img src="Images/logo.png" alt="Li-Ming Tan"></a>
             </div>
     <nav>
         <ul>
