Widescale Updates To All Pages

--- a/html_and_css.html
+++ b/html_and_css.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Document</title>
+    <title>Li-Ming Tan - HTML & CSS</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 </head>
 <body>
     <div class="logo"><a href="index.html"><img src="images/logo.png" alt="Li-Ming Tan"></a>
@@ -14,7 +15,7 @@
             <li><a href="index.html">My Journey</a></li>
             <li><a href="python.html">Python</a></li>
             <li><a href="html_and_css.html">Html & Css</a></li>
-            <li><a href="about_me.html">About Me</a></li>
+            <li><a href="hire_me.html">Hire Me</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
