--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Li-Ming Tan - Portfolio Homepage</title>
+    <title>Li-Ming Tan - My Journey</title>
+    <link rel="shortcut icon" type="image/png" href="Images/favicon.png"/>
 </head>
 <body>
     
@@ -15,7 +16,7 @@
             <li><a href="index.html">My Journey</a></li>
             <li><a href="python.html">Python</a></li>
             <li><a href="html_and_css.html">Html & Css</a></li>
-            <li><a href="about_me.html">About Me</a></li>
+            <li><a href="hire_me.html">Hire Me</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -45,17 +46,34 @@
             <img src="Images/graduation.jpg" alt="Li-Ming at Aberystwyth Graduation 2013">
         </div>
         </div>
-        <div class="img-align">
-            <img class="img-three" src="Images/foobar_complete1.png" alt="Success, First challenge completed!">
-        </div>
-    <div class="slide-two">
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-       <br>Eveniet est quam corporis tempora repudiandae temporibus sint
-       <br>laboriosam saepe molestiae aut, mollitia dignissimos praesentium
-       <br>quas molestias distinctio sapiente eos quos a dolor inventore? Ullam animi laborum culpa soluta id quae impedit cumque, atque, natus expedita libero molestias labore? Animi modi sequi suscipit rerum perferendis. Voluptatibus odit adipisci officia quam at repellat, omnis in, explicabo consequatur voluptas ipsa laborum eligendi? Ea accusamus quisquam molestiae repellendus voluptatem quaerat laboriosam quod eos dicta nemo consectetur tempore voluptatibus soluta sapiente eaque aliquam, provident doloremque quo aperiam dolorem! Debitis corrupti culpa nobis cumque laborum, totam vero.</p>
+
+    <div>
+        <img class="img-top" src="Images/cellpath1.jpg" alt="Lab work at CellPath">
+    <p class="pad35">Aug 2013 – Mar 2014: Cellpath/Peter Webber</p>
+    <p class="pad">
+        <br>
+        <br>
+        	 Responsibility for securing funding for projects through funding applications such as Welsh Economic Growth Fund and Xenos business forum 
+        <br>
+        	Angel Investment pitch
+        <br>
+        	Intellectual property patent and trademark searches
+        <br>
+        	Maintaining confidentiality through the use of Non-Disclosure agreements
+        <br>
+        	Attending workshops, seminars, networking events including membership of the Mid Wales Manufacturing Group
+        <br>
+        	Maintaining personal work schedule and providing weekly summaries and reports 
+    </p>
     </div>
-    <div class="slide-three"></div>
-    <div class="slide-four"></div>
+    <div class="container1">
+    <img class="img-top" src="Images/cellpath2.jpg" alt="Chemical production lab at CellPath">
+    <img class="img-bottom" src="Images/cellpath3.jpg" alt="Materials testing">
+    </div>
+    <div>
+        <img class="img-three" src="Images/foobar_complete1.png" alt="Success, First challenge completed!">
+    </div>
+    <div></div>
     </div>
     </div>
 
