--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
     <img class="img-top" src="Images/cellpath2.jpg" alt="Chemical production lab at CellPath">
     <img class="img-bottom" src="Images/cellpath3.jpg" alt="Materials testing">
     </div>
+    <p class="textpadtop rightpad">I was fortunate enough to be invited 
+        <br>by Google to participate in the Google Foobar Challenge in December 2020.
+        <br>
+        <br>This has been an amazing opportunity to learn Python through. 
+        <br>
+        <br>Find out what the <a href="https://medium.com/chingu/my-experience-with-the-google-foobar-challenge-and-tips-on-what-to-do-if-you-get-it-9848d31d3d20#:~:text=Wait%2C%20what%20is%20the%20Google,request%20questions%20and%20solve%20them.">Google Foobar Challenge</a> is. If you don't already know.
+        <br>
+        <br>I've used the momentum from participating in this challenge,
+        <br>along with signing up for as many possible courses as possible and 
+        <br>reading and learning as much as I can to kick start my coding journey!
+    </p>
     <div>
         <img class="img-three" src="Images/foobar_complete1.png" alt="Success, First challenge completed!">
     </div>
