--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="Images/favicon.png"/>
 </head>
 <body>
-    <div class="logo"><a href="index.html"><img src="images/logo.png" alt="Li-Ming Tan"></a>
+    <div class="logo"><a href="index.html"><img src="Images/logo.png" alt="Li-Ming Tan"></a>
     </div>
     <nav>
         <ul>
