--- a/html_and_css.html
+++ b/html_and_css.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css">
     <title>Li-Ming Tan - HTML & CSS</title>
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="Images/favicon.png"/>
 </head>
 <body>
-    <div class="logo"><a href="index.html"><img src="images/logo.png" alt="Li-Ming Tan"></a>
+    <div class="logo"><a href="index.html"><img src="Images/logo.png" alt="Li-Ming Tan"></a>
     </div>
     <nav>
         <ul>
