open links in new window

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <br>
         <br>This has been an amazing opportunity to learn Python through. 
         <br>
-        <br>Find out what the <a href="https://medium.com/chingu/my-experience-with-the-google-foobar-challenge-and-tips-on-what-to-do-if-you-get-it-9848d31d3d20#:~:text=Wait%2C%20what%20is%20the%20Google,request%20questions%20and%20solve%20them.">Google Foobar Challenge</a> is. If you don't already know.
+        <br>Find out what the <a href="https://medium.com/chingu/my-experience-with-the-google-foobar-challenge-and-tips-on-what-to-do-if-you-get-it-9848d31d3d20#:~:text=Wait%2C%20what%20is%20the%20Google,request%20questions%20and%20solve%20them." target="_blank">Google Foobar Challenge</a> is. If you don't already know.
         <br>
         <br>I've used the momentum from participating in this challenge,
         <br>along with signing up for as many possible courses as possible and 
