--- a/hire_me.html
+++ b/hire_me.html
@@ -20,6 +20,6 @@
         </ul>
     </nav>
     <h1>Hire Me</h1>
-    <p class="pad35 text-size"><a href="Files/CV-Li-Ming-2021.pdf" target="_blank">Download My CV</a></p>
+    <p class="pad35 text-size"><a href="" target="_blank">Download My CV</a></p>
 </body>
 </html>
